<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quotas</string>

    <string name="main_label">Overview</string>
    <string name="settings_label">Settings</string>
    <string name="edit_label">Edit</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_search">search</string>
    <string name="action_websearch">search</string>

    <!-- The button label for saving an event -->
    <string name="save_label">Done</string>
    <!-- The button label for discarding changes to an event -->
    <string name="discard_label">Cancel</string>

    <!-- Settings and Preferences -->
    <string name="pref_notifications_title">Notification Settings</string>
    <string name="pref_notify">Enable Notifications</string>
    <string name="pref_notify_summ">Quotas will notify you when you\'re behind on your quotas, or when an opportunity to complete one arises</string>

    <string name="pref_disturb_title">Do not Disturb Settings</string>
    <string name="pref_disturb">Do not Disturb</string>
    <string name="pref_disturb_summ">Set a range of time where Quotas will never be scheduled. This is useful for times when you would be asleep.</string>

    <array name="default_color_array">
        <item>@color/Cobalt</item>
        <item>@color/Dark_Purple</item>
        <item>@color/HarleyDavidsonOrange</item>
        <item>@color/AppleGreen</item>
        <item>@color/Burning_Sand</item>
        <item>@color/Summer_Sky</item>
        <item>@color/Sunflower</item>
    </array>

    <string-array name="color_name_array">
        <item>Cobalt</item>
        <item>Dark Purple</item>
        <item>Orange</item>
        <item>Apple Green</item>
        <item>Burning Sand</item>
        <item>Summer Sky</item>
        <item>Sunflower</item>
    </string-array>

    <string name="chart_empty">There are no Quotas</string>

    <!-- EditActivity -->
    <string name="edit_title_hint">Title</string>
    <string name="edit_description_hint">Description</string>

    <string name="edit_color_title">Color</string>
    <string name="color_value">None</string>

    <string name="location">location</string>

    <string name="starttime_value">Start</string>
    <string name="endtime_value">End</string>

    <string name="edit_duration_title">Duration</string>
    <string name="edit_duration_value">None</string>


    <string name="edit_times_title">Times</string>

    <string name="repeat_title">Repeat</string>
    <string name="repeat_value">@string/off</string>

    <string name="on">On</string>
    <string name="off">Off</string>

    <string-array name="week_day_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="save_success">Quota Saved</string>
    <string name="save_failed">Save Failed!</string>
    <string name="time_not_set">Please set a start and end time</string>

    <!-- Recurrance options array -->
    <string name="recurrence_daily">Repeat Daily</string>
    <string name="recurrence_weekly">Repeat Weekly</string>
    <string name="recurrence_monthly">Repeat Monthly</string>
    <string name="recurrence_yearly"> Repeat Yearly</string>

    <string name="every">Every</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>

    <string name="recurrence_until_selected">Until</string>
    <string name="recurrence_for_selected">For</string>

    <string name="done">Done</string>


    <!-- Dialog title for recurrence picker for configuring a repeating event[CHAR LIMIT=20] -->
    <string name="recurrence_dialog_title">Repeat</string>
    <!-- Dialog title for recurrence picker when one-time event is selected [CHAR LIMIT=20] -->
    <string name="recurrence_dialog_title_never">Never repeats</string>

    <!-- Strings to describe how frequently to repeat an event (e.g. every 5 days) -->
    <plurals name="recurrence_interval_daily">
        <!-- Singular form [CHAR LIMIT=30] -->
        <item quantity="one">Every %d day</item>
        <!-- Plural form [CHAR LIMIT=30] -->
        <item quantity="other">Every %d days</item>
    </plurals>
    <!-- Strings to describe how frequently to repeat an event (e.g. every 5 weeks) -->
    <plurals name="recurrence_interval_weekly">
        <!-- Singular form [CHAR LIMIT=30] -->
        <item quantity="one">Every %d week</item>
        <!-- Plural form [CHAR LIMIT=30] -->
        <item quantity="other">Every %d weeks</item>
    </plurals>
    <!-- Strings to describe how frequently to repeat an event (e.g. every 5 months) -->
    <plurals name="recurrence_interval_monthly">
        <!-- Singular form [CHAR LIMIT=30] -->
        <item quantity="one">Every %d month</item>
        <!-- Plural form [CHAR LIMIT=30] -->
        <item quantity="other">Every %d months</item>
    </plurals>
    <!-- Strings to describe how frequently to repeat an event (e.g. every 5 years) -->
    <plurals name="recurrence_interval_yearly">
        <!-- Singular form [CHAR LIMIT=30] -->
        <item quantity="one">Every %d year</item>
        <!-- Plural form [CHAR LIMIT=30] -->
        <item quantity="other">Every %d years</item>
    </plurals>

    <!-- Repeat an monthly event on the same day of every month [CHAR LIMIT=20] -->
    <string name="recurrence_month_pattern_by_day">on the same day each month</string>

    <!-- Specifies that a repeating event to repeat forever (based on the defined frequency) instead of ending at a future date[CHAR LIMIT=20] -->
    <string name="recurrence_end_continously">Forever</string>
    <!-- Specifies that a repeating event to repeat until a certain date[CHAR LIMIT=25] -->
    <string name="recurrence_end_date_label">Until a date</string>
    <!-- Specifies that a repeating event to repeat until a certain date[CHAR LIMIT=20] -->
    <string name="recurrence_end_date">Until %s</string>
    <!-- Specifies that a repeating event to repeat for a number of times. A repeating event can repeat forever, repeat in a certain frequency until a certain date, or repeat for a number of times. e.g. repeat 10 times and stop. This string is for the last case [CHAR LIMIT=25] -->
    <string name="recurrence_end_count_label">For a number of events</string>

    <!-- Specifies that a repeating event should repeat for a certain number of iterations. [CHAR LIMIT=20]-->
    <plurals name="recurrence_end_count">
        <item quantity="one">For %d event</item>
        <item quantity="other">For %d events</item>
    </plurals>

    <!-- Description of the selected marker for accessibility support [CHAR LIMIT = NONE]-->
    <string name="acessibility_recurrence_choose_end_date_description">change end date</string>
</resources>
