<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/pref_notifications_title"
            android:key="pref_notifcations_title"
            >
        <CheckBoxPreference
                android:key="pref_notify"
                android:title="@string/pref_notify"
                android:summary="@string/pref_notify_summ"
                android:defaultValue="true"
                android:textColor="@color/text_regular"
            />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_disturb_title"
            android:key="pref_disturb_category"
            >
        <CheckBoxPreference
                android:key="pref_disturb"
                android:title="@string/pref_disturb"
                android:summary="@string/pref_disturb_summ"
                android:defaultValue="false"
                android:textColor="@color/text_regular"
            />
    </PreferenceCategory>
</PreferenceScreen>
