<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:paddingLeft="@dimen/dialog_horizontal_margin"
        android:paddingRight="@dimen/dialog_horizontal_margin"
        >
    <LinearLayout
            android:id="@+id/recurrence_weekly"
            android:orientation="horizontal"
            android:layout_height="@dimen/listPreferredItemHeight"
            android:layout_width="fill_parent"
            >
        <TextView
                android:text="@string/every"
                style="@style/RecurrencePickerText"
            />
        <EditText
                android:id="@+id/weekly_count"
                style="@style/CountSelection"
            />
        <TextView
                android:text="@string/weeks"
                style="@style/RecurrencePickerText"
            />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/recurrence_daily"
            android:orientation="horizontal"
            android:layout_height="@dimen/listPreferredItemHeight"
            android:layout_width="fill_parent"
            android:visibility="gone"
            >
        <TextView
                android:text="@string/every"
                style="@style/RecurrencePickerText"
            />
        <EditText
                android:id="@+id/daily_count"
                style="@style/CountSelection"
            />
        <TextView
                android:text="@string/days"
                style="@style/RecurrencePickerText"
            />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/recurrence_monthly"
            android:orientation="horizontal"
            android:layout_height="@dimen/listPreferredItemHeight"
            android:layout_width="fill_parent"
            android:visibility="gone"
            >
        <TextView
                android:text="@string/every"
                style="@style/RecurrencePickerText"
            />
        <EditText
                android:id="@+id/monthly_count"
                style="@style/CountSelection"
            />
        <TextView
                android:text="@string/months"
                style="@style/RecurrencePickerText"
            />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/recurrence_yearly"
            android:orientation="horizontal"
            android:layout_height="@dimen/listPreferredItemHeight"
            android:layout_width="fill_parent"
            android:visibility="gone"
            >
        <TextView
                android:text="@string/every"
                style="@style/RecurrencePickerText"
            />
        <EditText
                android:id="@+id/yearly_count"
                style="@style/CountSelection"
            />
        <TextView
                android:text="@string/days"
                style="@style/RecurrencePickerText"
            />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="@dimen/listPreferredItemHeight"
            android:layout_width="fill_parent"
            >
        <Spinner
            android:id="@+id/endSpinner"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textColor="@color/text_regular"
            />
    </LinearLayout>
</LinearLayout>
